samples/_failures_safe/1761374039_5ed719_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1cbc992.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e1cbc992.c:168:16: error: expected ‘;’ at end of input
  168 |             pos
      |                ^
      |                ;
./samples/SAFE/__tmp_e1cbc992.c:168:13: error: expected declaration or statement at end of input
  168 |             pos
      |             ^~~
./samples/SAFE/__tmp_e1cbc992.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1cbc992.c:168:13: error: expected declaration or statement at end of input
